Added explore section All image now zoomable

--- a/about.html
+++ b/about.html
@@ -33,13 +33,22 @@
     <div class="container wow" style="margin-top: 50px">
         <h3>Routes from different locations</h3>
         <h5 class="marg">Thakurpukur Market to Chitrayan (3 kilometers) </h5>
-        <img src="images/thakurpur_chitrayan.jpg" alt="">
+        <a data-fancybox-group="1" class="thumb" href="images/thakurpur_chitrayan.jpg">
+            <img src="images/thakurpur_chitrayan.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
 
         <h5 class="marg">Tollygunj Crossing to Chitrayan (10 kilometers) </h5>
-        <img src="images/tolly_chitrayan.jpg" alt="">
+        <a data-fancybox-group="1" class="thumb" href="images/tolly_chitrayan.jpg">
+            <img src="images/tolly_chitrayan.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
 
         <h5 class="marg">Joka to Chitrayan (3 kilometers) </h5>
-        <img src="images/joka_chitrayan.jpg" alt="">
+        <a data-fancybox-group="1" class="thumb" href="images/joka_chitrayan.jpg">
+            <img src="images/joka_chitrayan.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
     </div>
 </section>
 <script>
