--- a/explore.html
+++ b/explore.html
@@ -1,1 +1,31 @@
-<h4>Work in progress</h4>
+<section class="well5">
+    <div class="container wow fadeInUp">
+        <h3>Perspective view of Chitrayan</h3>
+        <p>
+            Enjoy the experience of Chitrayan at your home through these 3D views. You will get the exact feeling as to how spacious
+            and comfortable the premises are. With pleanty of room for car parking, multiple dressing rooms and a huge shooting floor, Chitrayan
+            awaits you with a satisfying shooting experience.
+        </p>
+        <br/>
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/perspective/perspective1.jpg">
+            <img src="images/chitrayan/perspective/perspective1.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
+        <br/>
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/perspective/perspective2.jpg">
+            <img src="images/chitrayan/perspective/perspective2.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
+        <br/>
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/perspective/perspective3.jpg">
+            <img src="images/chitrayan/perspective/perspective3.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
+        <br/>
+        <h4 class="marg">Top View. </h4>
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/perspective/top.jpg">
+            <img src="images/chitrayan/perspective/top.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
+    </div>
+</section>
