--- a/facilities.html
+++ b/facilities.html
@@ -3,23 +3,22 @@
         <h3>Facilities</h3>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/glass_room_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/glass_room.jpg">
+                    <img src="images/chitrayan/facilities/glass_room_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Glass Room</a></h5>
-                <!--<p class="text1">
-                    <a class="comments" href="#"><span class="fa fa-comment"></span>3 comments</a>
-                    Added 2 days ago by
-                    <a class="link1" href="#">Admin</a>
-                </p>
-                <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>-->
                 <p>The glass room may be used for indoor shooting purposes. </p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/pcr2.jpg">
+                    <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Production Control Room</a></h5>
@@ -28,7 +27,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/outdoor_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/outdoor.jpg">
+                    <img src="images/chitrayan/facilities/outdoor_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Outdoor</a></h5>
@@ -37,7 +39,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/senior_makeup_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/senior_makeup.jpg">
+                    <img src="images/chitrayan/facilities/senior_makeup_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Make-Up Room</a></h5>
@@ -46,7 +51,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/junior_makeup.jpg">
+                    <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Make-Up Room</a></h5>
@@ -55,7 +63,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/facilities/production_office_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/production_office.jpg">
+                    <img src="images/chitrayan/facilities/production_office_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Production Offices</a></h5>
