--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="grid_12">
                 <h2>chitrayan!</h2>
-                <h5>Leader in providing shooting locations for producing feature films, made for TV movies,
+                <h5>Leader in providing shooting locations for producing feature films. Ideal for movies,
                     dramatic, comedy and reality television series, as well as, factual and lifestyle
-                    programming.</h5>
+                    programs.</h5>
             </div>
         </div>
         <div class="row">
@@ -36,40 +36,40 @@
             <div class="grid_4 wow fadeInRight">
                 <div class="box">
                     <h4>SHOOTING FLOOR</h4>
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img01_original.jpg">
-                        <img src="images/page-1_img01.jpg" alt="">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
+                        <img src="images/chitrayan/studio/1_preview.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
-                    <h6>Mauris fermeum dictum magna.</h6>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curs.</p>
-                    <a class="btn" href="#">read more</a>
+                    <h6>Spacious air-conditioned studio.</h6>
+                    <!-- <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                         vel curs.</p>-->
+                    <!--<a class="btn" href="studio.html">read more</a>-->
                 </div>
             </div>
             <div class="grid_4 wow fadeInRight" data-wow-delay="0.2s">
                 <div class="box">
-                    <h4>DRESSING ROOMS</h4>
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img02_original.jpg">
-                        <img src="images/page-1_img02.jpg" alt="">
+                    <h4>MAKE-UP ROOMS</h4>
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/junior_makeup.jpg">
+                        <img src="images/chitrayan/facilities/junior_makeup_preview.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
-                    <h6>Sed loreet aliquam leote llus dol.</h6>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curs.</p>
-                    <a class="btn" href="#">read more</a>
+                    <h6>Well-lit air-conditioned make-up rooms</h6>
+                    <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                        vel curs.</p>-->
+                    <!--<a class="btn" href="facilities.html">read more</a>-->
                 </div>
             </div>
             <div class="grid_4 wow fadeInRight" data-wow-delay="0.4s">
                 <div class="box">
-                    <h4>PRODUCTION ROOM</h4>
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img03_original.jpg">
-                        <img src="images/page-1_img03.jpg" alt="">
+                    <h4>PRODUCTION CONTROL ROOM</h4>
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/pcr2.jpg">
+                        <img src="images/chitrayan/facilities/pcr2_preview.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
-                    <h6>Mauris fermeum dictum magna.</h6>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curs.</p>
-                    <a class="btn" href="#">read more</a>
+                    <h6>Hi-tech production control room</h6>
+                    <!--<p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
+                        vel curs.</p>-->
+                    <!--<a class="btn" href="facilities.html">read more</a>-->
                 </div>
             </div>
         </div>
@@ -80,47 +80,91 @@
         <h3>Gallery</h3>
         <div class="gallery">
             <div id="isotop_filters" class="button-group">
-                <span data-filter=".category01">Gallery 1</span>
-                <span data-filter=".category02">Gallery 2</span>
-                <span data-filter=".category03">Gallery 3</span>
-                <span data-filter="*" class="is-checked">all galleries</span>
+                <span data-filter=".category01">Shootings</span>
+                <span data-filter=".category02">Studio Floor</span>
+                <span data-filter=".category03">Services</span>
+                <span data-filter="*" class="is-checked">All Galleries</span>
             </div>
             <div class="row isotop">
                 <div class="grid_4 isotop_item category01">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img04_original.jpg">
-                        <img src="images/page-1_img04.jpg" alt="">
+                    <a data-fancybox-group="1" onclick="return false;" class="thumb" href="images/chitrayan/shooting/1.jpg">
+                        <img class="preview-image" src="images/chitrayan/shooting/1.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
                 </div>
                 <div class="grid_4 isotop_item category01">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img05_original.jpg">
-                        <img src="images/page-1_img05.jpg" alt="">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.JPG">
+                        <img class="preview-image" src="images/chitrayan/shooting/2.JPG" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category01">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.JPG">
+                        <img class="preview-image" src="images/chitrayan/shooting/3.JPG" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category01">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.jpg">
+                        <img class="preview-image" src="images/chitrayan/shooting/4.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category01">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.jpg">
+                        <img class="preview-image" src="images/chitrayan/shooting/5.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+            </div>
+            <div class="row isotop">
+                <div class="grid_4 isotop_item category02">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
+                        <img class="preview-image" src="images/chitrayan/studio/1_preview.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
                 </div>
                 <div class="grid_4 isotop_item category02">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img06_original.jpg">
-                        <img src="images/page-1_img06.jpg" alt="">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/2.JPG">
+                        <img class="preview-image" src="images/chitrayan/studio/2_preview.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category02">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/3.JPG">
+                        <img class="preview-image" src="images/chitrayan/studio/3_preview.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category02">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/4.JPG">
+                        <img class="preview-image" src="images/chitrayan/studio/4_preview.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category02">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.JPG">
+                        <img class="preview-image" src="images/chitrayan/studio/5_preview.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
                 </div>
             </div>
             <div class="row isotop">
                 <div class="grid_4 isotop_item category03">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img07_original.jpg">
-                        <img src="images/page-1_img07.jpg" alt="">
-                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
-                    </a>
-                </div>
-                <div class="grid_4 isotop_item category01">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img08_original.jpg">
-                        <img src="images/page-1_img08.jpg" alt="">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/glass_room_preview.jpg">
+                        <img class="preview-image" src="images/chitrayan/facilities/glass_room.jpg" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
                 </div>
                 <div class="grid_4 isotop_item category03">
-                    <a data-fancybox-group="1" class="thumb" href="images/page-1_img09_original.jpg">
-                        <img src="images/page-1_img09.jpg" alt="">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/facilities/senior_makeup_preview.jpg">
+                        <img class="preview-image" src="images/chitrayan/facilities/senior_makeup.jpg" alt="">
+                        <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                    </a>
+                </div>
+                <div class="grid_4 isotop_item category03">
+                    <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/parking_preview.jpg">
+                        <img class="preview-image" src="images/chitrayan/infra/parking.JPG" alt="">
                         <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
                     </a>
                 </div>
@@ -132,7 +176,7 @@
     <div class="container well3">
         <h3>Chitrayan so far....</h3>
     </div>
-    <div class="parallax parallax_2" data-url="images/parallax2.jpg"></div>
+    <div class="parallax parallax_2" data-url="images/chitrayan/studio/6.jpg"></div>
     <!--<div class="container well4">
         <div class="row">
             <div class="grid_6 wow fadeInLeft">
@@ -161,18 +205,12 @@
                         <div class="counter">01</div>
                         <h3>Movies</h3>
                     </a>
-                    <h5><a href="#">Lorem ipsum</a></h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                        Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                        neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                        eros.</p>
                 </div>
             </div>
-            <div class="grid_3">
+            <!--<div class="grid_3">
                 <div class="box2">
                     <a href="#" class="box2_top">
-                        <div class="counter">02</div>
+                        <div class="counter">01</div>
                         <h3>dvd</h3>
                     </a>
                     <h5><a href="#">Lorem ipsum</a></h5>
@@ -182,45 +220,73 @@
                         neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
                         eros.</p>
                 </div>
-            </div>
+            </div>-->
             <div class="grid_3">
                 <div class="box2">
                     <a href="#" class="box2_top">
-                        <div class="counter">03</div>
+                        <div class="counter">01</div>
                         <h3>tv</h3>
                     </a>
-                    <h5><a href="#">Lorem ipsum</a></h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                        Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                        neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                        eros.</p>
                 </div>
             </div>
             <div class="grid_3">
                 <div class="box2">
                     <a href="#" class="box2_top">
-                        <div class="counter">04</div>
+                        <div class="counter">02</div>
                         <h3>shows</h3>
                     </a>
-                    <h5><a href="#">Lorem ipsum</a></h5>
-                    <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum
-                        vel curss eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis.
-                        Integer rutrum ante eu lacuestib ulum libero nisl porta vel scelerie eget mal esuada at
-                        neque. Vivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi lacuestib. Aenean nec
-                        eros.</p>
+                </div>
+            </div>
+            <div class="grid_3">
+                <div class="box2">
+                    <a href="#" class="box2_top">
+                        <div class="counter">12</div>
+                        <h3>ads</h3>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 </section>
 <section>
+    <div class="container well3">
+        <h3>Location on Map</h3>
+    </div>
     <div class="map">
         <div id="google-map" class="map_model"></div>
         <ul class="map_locations">
-            <li  data-x="22.4538082" data-y="88.2816636">
-                <p>9863 - 9867 Mill Road, Cambridge, MG09 99HT</p>
+            <li data-x="22.4538082" data-y="88.2816636">
+                <p>KALAGACHIA, SAKHARIPOTA MAIN ROAD, P.O. THAKURPUKUR</p><br/>
+                <p>P.S MAHESHTALA, DIST. SOUTH 24-PARGANAS</p>
             </li>
         </ul>
     </div>
 </section>
+<script defer src ="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwLBvjNDEkLkboMNpLY_E_VTaCm-XxRLc&callback=initMap">
+</script>
+<script>
+    function initMap() {
+        console.log('in map');
+        var chitrayan = {lat: 22.4538082, lng: 88.2816636};
+
+        var map = new google.maps.Map(document.getElementById('google-map'), {
+            zoom: 14,
+            center: chitrayan,
+            cntClass: 'map',
+            mapClass: 'map_model',
+            locationsClass: 'map_locations',
+            marker: {
+                basic: 'images/gmap_marker.png',
+                active: 'images/gmap_marker_active.png'
+            },
+        });
+
+        var marker = new google.maps.Marker({
+            position: chitrayan,
+            map: map,
+            icon: 'images/gmap_marker.png'
+        });
+    }
+</script>
+<script src="js/utility/pageLoader.js"></script>
+<script src="js/utility/script.js"></script>
