--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Home</title>
+    <title>Chitrayan</title>
     <meta charset="utf-8">
     <meta property="fb:app_id"        content="1241778969245906" />
     <meta property="og:url"           content="http://www.chitrayanfilmstudio.com" />
@@ -508,6 +508,6 @@
     }
 </script>
 <script src="js/utility/pageLoader.js"></script>
-<script src="js/utility/script.js"></script>s
+<script src="js/utility/script.js"></script>
 </body>
 </html>
