--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,10 @@
             Thanks to the spacious floor, multiple sets can be created thus saving time and money for our customers.<br/>
         </p>
         <br/>
-        <img src="images/chitrayan/studio/1.jpg" alt="">
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/1.jpg">
+            <img src="images/chitrayan/studio/1.jpg" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
         <h5 class="marg">Catwalk. </h5>
         <p>
             Catwalks are used to suspend lighting instruments and microphones directed at the stage. The catwalks provide easy access for theater personnel to perform common tasks.<br/>
@@ -18,8 +21,10 @@
             The catwalk is wide with support and railings to ensure the safety of the technicians.
         </p>
         <br/>
-        <img src="images/chitrayan/studio/5.JPG" alt="">
-
+        <a data-fancybox-group="1" class="thumb" href="images/chitrayan/studio/5.JPG">
+            <img src="images/chitrayan/studio/5.JPG" alt="">
+            <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+        </a>
 
         <h5 class="marg">Shooting floor in operation. </h5>
         <p>
@@ -29,7 +34,10 @@
 
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/1.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/1.jpg">
+                    <img src="images/chitrayan/shooting/1.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -37,7 +45,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/2.JPG" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/2.JPG">
+                    <img src="images/chitrayan/shooting/2.JPG" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -45,7 +56,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/3.JPG" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/3.JPG">
+                    <img src="images/chitrayan/shooting/3.JPG" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Haripada Bandwala (Bengali Film)</a></h5>
@@ -53,7 +67,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/4.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/4.JPG">
+                    <img src="images/chitrayan/shooting/4.JPG" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
@@ -61,7 +78,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/shooting/5.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/shooting/5.JPG">
+                    <img src="images/chitrayan/shooting/5.JPG" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Detective 2015 (Bengali Reality Show)</a></h5>
