--- a/infrastructure.html
+++ b/infrastructure.html
@@ -3,23 +3,22 @@
         <h3>Infrastructure</h3>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/fire_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/fire.JPG">
+                    <img src="images/chitrayan/infra/fire_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Fire Alarm</a></h5>
-                <!--<p class="text1">
-                    <a class="comments" href="#"><span class="fa fa-comment"></span>3 comments</a>
-                    Added 2 days ago by
-                    <a class="link1" href="#">Admin</a>
-                </p>
-                <p>Mauris fermeum dictum magna. Sed loreet aliquam leote llus dolor dapibus eget elementum vel cur eleifend elit. Aenean aucto. wisi et urna. Aliqat volutpat. Duisac turpis. Integer rutrum ante eu lacuestibulum libero nisl porta vel sceleriue eget malesuada at nequeVivamus eget nibh. Etiamursus leo vel metus. Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et trices posuere cubilia Suspendisse sollicit udin velit sed leo. Ut pharetra augue nec augentum. Donec in velit vel ipsum auue. Nam elit magna. </p>
-                <a class="btn" href="#">read more</a>-->
                 <p>Modern technology fire detection and prevention system. </p>
             </div>
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/dormitory_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/dormitory.JPG">
+                    <img src="images/chitrayan/infra/dormitory_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Hall</a></h5>
@@ -28,7 +27,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/canteen_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/canteen.JPG">
+                    <img src="images/chitrayan/infra/canteen_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Canteen</a></h5>
@@ -37,7 +39,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/parking_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/parking.JPG">
+                    <img src="images/chitrayan/infra/parking_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Parking</a></h5>
@@ -46,7 +51,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/facilities_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/facilities.JPG">
+                    <img src="images/chitrayan/infra/facilities_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Facilities Team</a></h5>
@@ -55,7 +63,10 @@
         </div>
         <div class="row blog wow fadeInRight">
             <div class="grid_6">
-                <img src="images/chitrayan/infra/generator_preview.jpg" alt="">
+                <a data-fancybox-group="1" class="thumb" href="images/chitrayan/infra/generator.JPG">
+                    <img src="images/chitrayan/infra/generator_preview.jpg" alt="">
+                    <span class="thumb_overlay"><span><span>Chitrayan!</span></span></span>
+                </a>
             </div>
             <div class="grid_6">
                 <h5><a href="#">Power backup</a></h5>
