changing og image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Chitrayan Film Studio" />
     <meta property="og:description"   content="Film Studio in Kolkata" />
-    <meta property="og:image"         content="http://www.chitrayanfilmstudio.com/images/parallax1.jpg" />
+    <meta property="og:image"         content="images/chitrayan/logo/chitrayan.png" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/camera.css">
